 - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire
 - allow setting terrain-type hardness and name via Spring.SetTerrainTypeData
 ! return the terrain-type index from Spring.GetGroundInfo and Spring.GetTerrainTypeData
   these functions now push [number index, string name, ...] rather than [string name, ...]
   onto the stack
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - remove LuaShaders config-setting
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed

Fixes:
 - fix #5803 (move goals cancelled when issued onto blocked terrain)
 - fix Spring.{G,S}etConfigFloat not being callable
 - fix Spring.GetPlayerRoster sometimes excluding active players



-- 104.0 --------------------------------------------------------
Major:
 - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload
   this environment receives the Draw{Genesis,Screen,ScreenPost} callins as well as
   a special AllowDraw FPS limiter which enables these if true is returned from it
   (otherwise they are called once every 30 seconds)